force-app/main/default/objects/SBS_Supplier_Scorecard__c/SBS_Supplier_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Contains snapshots of the Supplier Scorecard ranking values over time</description>
    <label>Supplier Scorecard</label>
    <nameField>
        <displayFormat>SCORE{YY}{MM}{DD}{000}</displayFormat>
        <label>SBS Supplier Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>