force-app/main/default/objects/SBS_Supplier_Scorecard__c/fields/Integration_Type_Score__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type_Score__c</fullName>
    <label>Integration Type Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>