force-app/main/default/objects/SBS_Supplier_Scorecard__c/fields/Landfill_Agreement_Score__c.field-meta.xml
<CustomField>
    <fullName>Landfill_Agreement_Score__c</fullName>
    <label>Landfill Agreement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>