force-app/main/default/objects/SBS_Supplier_Scorecard__c/fields/Payment_Method_Score__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Score__c</fullName>
    <label>Payment Method Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>