force-app/main/default/objects/SBS_Supplier_Scorecard__c/fields/Supplier_Score__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Score__c</fullName>
    <label>Supplier Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>