force-app/main/default/objects/SBS_Supplier_Scorecard__c/fields/Supplier_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Score_Date__c</fullName>
    <label>Supplier Score Date</label>
    <type>Date</type>
</CustomField>